# DTMC

./: CMakeLists.txt  Markov.cpp  Markov.h  MonteCarlo.cpp  MonteCarlo.h  README.md  compile_run_examplex.sh  main.cpp
Examples/Higgs/: plot_3_steps.py
Examples/Micro/15m_rp/: Micro_15m_rp.py
Examples/Micro/email_cp/: Micro_email_cp.py  email.edgelist
